unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/Group_Cancellation_Reinstatement__c.object-meta.xml
<CustomObject>
    <label>Group Cancellation/Reinstatement</label>
    <nameField>
        <displayFormat>GCR-{0000}</displayFormat>
        <label>Group Cancellation/Reinstatement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Cancellations/Reinstatements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>