unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Accident__c.field-meta.xml
<CustomField>
    <fullName>Accident__c</fullName>
    <label>Accident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>