unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/AD_D__c.field-meta.xml
<CustomField>
    <fullName>AD_D__c</fullName>
    <description>ADD premium for LifePro</description>
    <label>AD&amp;D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>