unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/ADD__c.field-meta.xml
<CustomField>
    <fullName>ADD__c</fullName>
    <label>ADD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>