unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>Group__r.Agency__c</formula>
    <label>Agency</label>
    <type>Text</type>
</CustomField>