unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Agency_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email_Address__c</fullName>
    <formula>Group__r.Agency_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Email Address</label>
    <type>Text</type>
</CustomField>