unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>Group__r.Agent__c</formula>
    <label>Agent</label>
    <type>Text</type>
</CustomField>