unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Address__c</fullName>
    <formula>Group__r.Agent_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Email Address</label>
    <type>Text</type>
</CustomField>