unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Blue_Rep__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep__c</fullName>
    <formula>Group__r.Blue_Rep__c</formula>
    <label>Blue Rep</label>
    <type>Text</type>
</CustomField>