unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Cancellation_Reinstatement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reinstatement_Reason__c</fullName>
    <label>Cancellation/Reinstatement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Below Percentage/Size</fullName>
            </value>
            <value>
                <fullName>Cancel/Claims Request</fullName>
            </value>
            <value>
                <fullName>Changing To Enterprise Small Group</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Entered Terminated Group In LifePro Due To Open Claim</fullName>
            </value>
            <value>
                <fullName>Expired Due To Age</fullName>
            </value>
            <value>
                <fullName>Extended Term Insurance</fullName>
            </value>
            <value>
                <fullName>Group&#39;s Request</fullName>
            </value>
            <value>
                <fullName>Leave Of Absence</fullName>
            </value>
            <value>
                <fullName>Move To SA Billing</fullName>
            </value>
            <value>
                <fullName>No DOL Approval</fullName>
            </value>
            <value>
                <fullName>Not REC Takeover Business</fullName>
            </value>
            <value>
                <fullName>Out Of Business/Dissolve</fullName>
            </value>
            <value>
                <fullName>Overloaned</fullName>
            </value>
            <value>
                <fullName>Paid At Master Group</fullName>
            </value>
            <value>
                <fullName>Policyholder&#39;s Request</fullName>
            </value>
            <value>
                <fullName>Product Setup In Error</fullName>
            </value>
            <value>
                <fullName>Rates/Competition</fullName>
            </value>
            <value>
                <fullName>Reduced Paid Up</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Rescinded Policy</fullName>
            </value>
            <value>
                <fullName>School Consolidation</fullName>
            </value>
            <value>
                <fullName>System Change Of Group Number Only</fullName>
            </value>
            <value>
                <fullName>Terminated Employment</fullName>
            </value>
            <value>
                <fullName>Transfer To Another Group With USAL</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>