unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Cancer__c.field-meta.xml
<CustomField>
    <fullName>Cancer__c</fullName>
    <label>Cancer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>