unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Cancer_Care__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Care__c</fullName>
    <label>Cancer Care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>