unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Care_and_Recovery_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Care_and_Recovery_Bundle__c</fullName>
    <label>Care and Recovery Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>