unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/CI_Critical_Illness__c.field-meta.xml
<CustomField>
    <fullName>CI_Critical_Illness__c</fullName>
    <label>CI (Critical Illness)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>