unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Dep_Life__c.field-meta.xml
<CustomField>
    <fullName>Dep_Life__c</fullName>
    <label>Dep Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>