unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Dependent_Life__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Life__c</fullName>
    <description>Dependent Life premium for LifePro</description>
    <label>Dependent Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>