unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/DI_Disability__c.field-meta.xml
<CustomField>
    <fullName>DI_Disability__c</fullName>
    <label>DI (Disability)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>