unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/DUO_Accident__c.field-meta.xml
<CustomField>
    <fullName>DUO_Accident__c</fullName>
    <label>DUO Accident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>