unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/DUO_Hospital__c.field-meta.xml
<CustomField>
    <fullName>DUO_Hospital__c</fullName>
    <label>DUO Hospital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>