unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipName>Group_Cancellations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>