unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Group_Accident_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Group_Accident_Recovery__c</fullName>
    <label>Group Accident Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>