unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Group_Cancer_Care_with_Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Group_Cancer_Care_with_Critical_Care__c</fullName>
    <label>Group Cancer Care with Critical Care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>