unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Group_Hospital_Care__c.field-meta.xml
<CustomField>
    <fullName>Group_Hospital_Care__c</fullName>
    <label>Group Hospital Care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>