unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Grp_Life__c.field-meta.xml
<CustomField>
    <fullName>Grp_Life__c</fullName>
    <label>Grp Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>