unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Grp_LTD__c.field-meta.xml
<CustomField>
    <fullName>Grp_LTD__c</fullName>
    <label>Grp LTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>