unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Grp_STD__c.field-meta.xml
<CustomField>
    <fullName>Grp_STD__c</fullName>
    <label>Grp STD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>