unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/GTL__c.field-meta.xml
<CustomField>
    <fullName>GTL__c</fullName>
    <description>GTL premium for LifePro</description>
    <label>GTL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>