unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/HIP_Hospital_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>HIP_Hospital_Indemnity__c</fullName>
    <label>HIP (Hospital Indemnity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>