unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/MA_PFL__c.field-meta.xml
<CustomField>
    <fullName>MA_PFL__c</fullName>
    <label>MA-PFL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>