unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/NumbEes__c.field-meta.xml
<CustomField>
    <fullName>NumbEes__c</fullName>
    <label>NumbEes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>