unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/PFML__c.field-meta.xml
<CustomField>
    <fullName>PFML__c</fullName>
    <label>PFML</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>