unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Group_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>