unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <description>STD premium for LifePro</description>
    <label>STD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>