unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Supp_Life__c.field-meta.xml
<CustomField>
    <fullName>Supp_Life__c</fullName>
    <label>Supp Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>