unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/TDI__c.field-meta.xml
<CustomField>
    <fullName>TDI__c</fullName>
    <label>TDI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>