unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/TL_Term_Life__c.field-meta.xml
<CustomField>
    <fullName>TL_Term_Life__c</fullName>
    <label>TL (Term Life)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>