unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/Total_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Premium__c</fullName>
    <formula>Total_Monthly_Premium__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>