unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/UL_Whole_Life__c.field-meta.xml
<CustomField>
    <fullName>UL_Whole_Life__c</fullName>
    <label>UL/Whole Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>