unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/VADD__c.field-meta.xml
<CustomField>
    <fullName>VADD__c</fullName>
    <label>VADD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>