unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/VGTL__c.field-meta.xml
<CustomField>
    <fullName>VGTL__c</fullName>
    <label>VGTL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>