unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <label>VIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>