unpackaged/main/default/objects/Group_Cancellation_Reinstatement__c/fields/VLTD__c.field-meta.xml
<CustomField>
    <fullName>VLTD__c</fullName>
    <label>VLTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>